Added src folder which now contains /client and /server

--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/dis-guisekaylee/my-react-boilerplate/issues"
   },
-  "homepage": "https://github.com/dis-guisekaylee/my-react-boilerplate#readme"
+  "homepage": "https://github.com/dis-guisekaylee/my-react-boilerplate#readme",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0"
+  }
 }
