--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Basic React Boilerplate",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm run build-server && npm run build-client",
+    "build-server": "babel src/server --out-dir ./dist",
+    "build-client": "babel src/client --copy-files --out-dir ./dist/public",
+    "start": "node ./dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +25,10 @@
   "homepage": "https://github.com/dis-guisekaylee/my-react-boilerplate#readme",
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0"
+    "babel-preset-env": "^1.7.0",
+    "jest": "^29.3.1"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
