--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "npm run build-server && npm run build-client",
     "build-server": "babel src/server --out-dir ./dist",
     "build-client": "babel src/client --copy-files --out-dir ./dist/public",
-    "start": "node ./dist/index.js"
+    "start": "node ./dist/index.js",
+    "test": "jest ./src"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "jest": "^29.3.1"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.20.2",
     "express": "^4.18.2"
   }
 }
