--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build-server": "babel src/server --out-dir ./dist",
     "build-client": "babel src/client --copy-files --out-dir ./dist/public",
     "start": "node ./dist/index.js",
-    "test": "jest ./src"
+    "test": "jest ./src",
+    "clean": "rimraf dist node_modules"
   },
   "repository": {
     "type": "git",
@@ -25,16 +26,21 @@
   },
   "homepage": "https://github.com/dis-guisekaylee/my-react-boilerplate#readme",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "jest": "^29.3.1"
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^9.1.0",
+    "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.3.1",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.20.2",
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "webpack": "^3.12.0"
+    "rimraf": "^3.0.2"
   }
 }
